Bug 1451172 - Fallback to current global in FindAssociatedGlobal when nsIGlobalObject doesn't have JS object anymore. r=bz, a=RyanVM

--HG--
extra : source : b3a5c5824ad80ae96997eb84a8d921372850a9fe